--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 
+@font-face {
+    font-family: myFont;
+    src: url('/css/southam/pida.otf');
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -46,10 +51,9 @@ body {
 }
 
 .logo {
-    position: relative;
-    font-size: 2.5rem;
-    color: var(--text-color);
-    font-weight: 600;
+    font-family: myFont;
+    color:white;
+    font-size: 70px;
 }
 
 .navbar {
@@ -768,9 +772,17 @@ section:nth-child(odd) .animate.scroll,
     html {
         font-size: 55%;
     }
+
+    .logo {
+        font-size: 60px;
+    }
 }
 
 @media (max-width: 991px) {
+    .logo {
+        font-size: 50px;
+    }
+
     .header {
         padding: 2rem 4%;
     }
@@ -789,6 +801,10 @@ section:nth-child(odd) .animate.scroll,
 }
 
 @media (max-width: 850px){
+    .logo {
+        font-size: 50px;
+    }
+
     .animate.home-img {
         width: 50%;
     }
@@ -802,6 +818,10 @@ section:nth-child(odd) .animate.scroll,
 
     #menu-icon {
         display: block;
+    }
+
+    .logo {
+        font-size: 50px;
     }
 
     .navbar {
@@ -867,6 +887,10 @@ section:nth-child(odd) .animate.scroll,
         font-size: 50%;
     }
 
+    .logo {
+        font-size: 45px;
+    }
+
     .home-content h1 {
         display: flex;
         flex-direction: column;
@@ -883,6 +907,10 @@ section:nth-child(odd) .animate.scroll,
 }
 
 @media (max-width: 462px) {
+    .logo {
+        font-size: 40px;
+    }
+
     .home-content h1 {
         font-size: 5.2rem;
     }
@@ -910,6 +938,11 @@ section:nth-child(odd) .animate.scroll,
 }
 
 @media (max-width: 371px) {
+    .logo {
+        font-size: 30px;
+    }
+
+
     .home {
         justify-content: center;
     }
